# cargo-loading-calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  clc  main.cpp
src/: CMakeLists.txt  CargoItem.cpp  CargoItem.hpp  Trolley.cpp  Trolley.hpp  best_fit_decreasing.cpp  best_fit_decreasing.hpp  main.cpp  parse_cargo_file.cpp  parse_cargo_file.hpp
test/: CMakeLists.txt  CargoItemTests.cpp  CargoLoadingCalculatorTests.cpp  TrolleyTests.cpp  example.cpp  parse_cargo_fileTests.cpp
